{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 63,
  "lineage": "0625ac43-1d56-13fb-5036-9a7590f33303",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-21T14:09:01.835-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-logan/global/firewalls/terraform-network-allow-db",
            "log_config": [],
            "name": "terraform-network-allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-logan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/firewalls/terraform-network-allow-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-21T13:12:05.431-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-logan/global/firewalls/terraform-network-allow-http",
            "log_config": [],
            "name": "terraform-network-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-logan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/firewalls/terraform-network-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-21T13:12:05.342-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis-91-logan/global/firewalls/terraform-network-allow-ssh",
            "log_config": [],
            "name": "terraform-network-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis-91-logan",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/firewalls/terraform-network-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/zones/us-central1-c/disks/terraform-instance-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/zones/us-central1-c/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-logan/zones/us-central1-c/instances/db-instance",
            "instance_id": "4423843393433329175",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "GXrvFBotG2g=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.113.0.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-logan"
              }
            ],
            "project": "cis-91-logan",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/zones/us-central1-c/instances/db-instance",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-logan.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.persistent_disk",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/zones/us-central1-c/disks/web-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis-91-logan/zones/us-central1-c/instances/web-instance",
            "instance_id": "2171971389937770027",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "GXrvFBotG2g=",
            "name": "web-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.88.162",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis-91-logan"
              }
            ],
            "project": "cis-91-logan",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/zones/us-central1-c/instances/web-instance",
            "service_account": [
              {
                "email": "vm-sa-wiki@cis-91-logan.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cis-91-logan/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2567673263858477972",
            "project": "cis-91-logan",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis-91-logan/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}